<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/new_login_gradients"
    tools:context="com.nelsonbenitez.laboratorioii.LogginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Here you can put your logo or brand name -->

            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/persona_blanco"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/Usuario"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:id="@+id/usuario_login"
                android:maxLines="1"
                android:drawableLeft="@drawable/persona_blanco"
                android:layout_marginTop="70dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/contrasena"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:id="@+id/contrasena_login"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/lock_white"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/ingresar"
                android:id="@+id/ingresar"
                android:textColor="#f16f7d"
                android:textAllCaps="false"
                android:padding="16dp"
                android:clickable="true"
                android:onClick="Ingresar"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_marginTop="24dp"
                android:textSize="18sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_signup"
                android:text="@string/registrarse"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="#fff"
                android:id="@+id/registro_login"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:onClick="Registro"
                android:padding="16dp"/>



        </LinearLayout>
    </ScrollView>

</LinearLayout>
